Fixed display issues on mobile.

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 h1 {
 	color: #333;
 	font-size: 35px;
-	margin-top: 0;
+	margin-top: 30px;
 }
 
 p {
